--- a/index.html
+++ b/index.html
@@ -4,99 +4,80 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sole by April</title>
-
 <style>
-* { box-sizing: border-box; }
+* { box-sizing: border-box; margin:0; padding:0; font-family: Arial,sans-serif; }
 
-body { margin: 0; font-family: Arial, sans-serif; background: #fff; }
+body { background: #fff; }
+header { background: black; color: gold; padding: 18px; font-size: 1.8em; text-align: center; font-weight:bold; position: relative; }
+header .hamburger { position: absolute; left:15px; top:18px; font-size:1.5em; cursor:pointer; }
+header .cart-btn { position: absolute; right:15px; top:18px; cursor:pointer; font-size:1.5em; }
 
-header {
-  background: black; color: gold; padding: 18px;
-  text-align: center; font-size: 1.9em; font-weight: bold;
+.sidebar {
+  position: fixed; top:0; left:-250px; width:250px; height:100%; background:#222; color:white; padding-top:60px;
+  transition: 0.3s; z-index: 2000;
 }
+.sidebar a { display:block; padding:15px 20px; text-decoration:none; color:white; font-weight:600; }
+.sidebar a:hover { background: gold; color:black; }
 
-.hero {
-  text-align: center; padding: 25px; background: #f7f7f7;
+.hero { text-align:center; padding:25px; background:#f7f7f7; }
+
+.products { display:grid; grid-template-columns:repeat(auto-fit, minmax(260px,1fr)); gap:20px; padding:20px; }
+
+.product-card { border:1px solid #ddd; border-radius:10px; padding:15px; text-align:center; }
+.product-card img { width:100%; border-radius:8px; }
+.product-name { font-weight:bold; margin-top:10px; }
+.product-price { color: gold; font-weight:bold; font-size:1.2em; }
+.btn { margin-top:10px; padding:10px 20px; background:black; color:gold; border:none; border-radius:25px; font-weight:bold; cursor:pointer; }
+
+.trust { background:#f9f9f9; padding:20px; text-align:center; }
+
+footer { background:black; color:gold; text-align:center; padding:15px; }
+
+/* MODALS */
+.modal, .cart-modal, .account-modal {
+  display:none; position:fixed; inset:0; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; z-index:3000;
 }
-
-.products {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px,1fr));
-  gap: 20px;
-  padding: 20px;
+.modal-content, .cart-content, .account-content {
+  background:white; padding:20px; border-radius:10px; width:95%; max-width:420px;
 }
-
-.product-card {
-  border: 1px solid #ddd; border-radius: 10px;
-  padding: 15px; text-align: center;
-}
-
-.product-card img {
-  width: 100%; border-radius: 8px;
-}
-
-.product-name { font-weight: bold; margin-top: 10px; }
-.product-price { color: gold; font-weight: bold; font-size: 1.2em; }
-.btn {
-  margin-top: 10px; padding: 10px 20px; background: black; color: gold;
-  border: none; border-radius: 25px; font-weight: bold; cursor: pointer;
-}
-
-.trust {
-  background: #f9f9f9; padding: 20px; text-align: center;
-}
-
-footer {
-  background: black; color: gold; text-align: center; padding: 15px;
-}
-
-.modal {
-  display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.6);
-  justify-content: center; align-items: center; z-index: 1000;
-}
-
-.modal-content {
-  background: white; padding: 20px; border-radius: 10px;
-  width: 95%; max-width: 420px;
-}
-
-.bank-box {
-  background: #f1f1f1; padding: 15px; border-radius: 8px; margin: 10px 0;
-}
-
-.whatsapp-btn {
-  background: #25D366; color: white; padding: 12px; border-radius: 25px;
-  display: block; text-decoration: none; font-weight: bold; margin-top: 10px;
-}
-
-input, select { width: 100%; padding: 10px; margin: 8px 0; border-radius: 5px; border: 1px solid #ccc; }
+input, select { width:100%; padding:10px; margin:8px 0; border-radius:5px; border:1px solid #ccc; }
+.whatsapp-btn { background:#25D366; color:white; padding:12px; border-radius:25px; display:block; text-decoration:none; font-weight:bold; margin-top:10px; text-align:center; }
+.close-btn { margin-top:10px; padding:10px 20px; background:black; color:gold; border:none; border-radius:25px; font-weight:bold; cursor:pointer; width:100%; }
 </style>
 </head>
-
 <body>
 
-<header>Sole by April</header>
+<header>
+  <span class="hamburger">&#9776;</span>
+  Sole by April
+  <span class="cart-btn">&#128722;</span>
+</header>
+
+<div class="sidebar" id="sidebar">
+  <a href="#">Home</a>
+  <a href="#">Products</a>
+  <a href="#" id="openAccount">My Account</a>
+  <a href="#" id="openCartSidebar">Cart (<span id="cartCount">0</span>)</a>
+  <a href="#">Contact</a>
+</div>
 
 <section class="hero">
   <h2>Step in Style 👟</h2>
   <p>Pay via bank transfer & send receipt on WhatsApp</p>
 </section>
 
-<section class="products">
-  <!-- PRODUCT 1 -->
+<section class="products" id="productList">
   <div class="product-card">
     <img src="https://i.imgur.com/eh97HcZ.jpg">
     <div class="product-name">Desert King</div>
     <div class="product-price">₦18,500</div>
-    <button class="btn buy" data-name="Desert King" data-price="₦18,500">Buy Now</button>
+    <button class="btn add-to-cart" data-name="Desert King" data-price="₦18,500">Add to Cart</button>
   </div>
-
-  <!-- PRODUCT 2 -->
   <div class="product-card">
     <img src="https://i.imgur.com/Qp1Z5Xc.jpg">
     <div class="product-name">Urban Flex</div>
     <div class="product-price">₦22,000</div>
-    <button class="btn buy" data-name="Urban Flex" data-price="₦22,000">Buy Now</button>
+    <button class="btn add-to-cart" data-name="Urban Flex" data-price="₦22,000">Add to Cart</button>
   </div>
 </section>
 
@@ -108,68 +89,100 @@ input, select { width: 100%; padding: 10px; margin: 8px 0; border-radius: 5px; b
   <p>✔ Pay & Send Receipt on WhatsApp</p>
 </section>
 
-<div class="modal" id="modal">
-  <div class="modal-content">
-    <h3 id="pName"></h3>
-    <p id="pPrice"></p>
+<footer>&copy; 2025 Sole by April</footer>
 
-    <div class="bank-box">
-      <strong>Bank Transfer Details</strong><br><br>
-      Bank: <b>OPay</b><br>
-      Account Name: <b>Eseghalogho Osariemen Success</b><br>
-      Account Number: <b>9153504465</b>
-    </div>
-
-    <input id="location" placeholder="Delivery Location (e.g., Ikeja)">
-
-    <a id="waLink" class="whatsapp-btn" target="_blank">Send Receipt on WhatsApp</a>
-    <button class="btn" onclick="closeModal()">Close</button>
+<!-- CART MODAL -->
+<div class="cart-modal" id="cartModal">
+  <div class="cart-content">
+    <h3>Your Cart</h3>
+    <div id="cartItems"></div>
+    <input id="deliveryLoc" placeholder="Delivery Location">
+    <a id="waCheckout" class="whatsapp-btn" target="_blank">Checkout on WhatsApp</a>
+    <button class="close-btn" onclick="closeCart()">Close</button>
   </div>
 </div>
 
-<footer>
-  &copy; 2025 Sole by April
-</footer>
+<!-- ACCOUNT MODAL -->
+<div class="account-modal" id="accountModal">
+  <div class="account-content">
+    <h3 id="accountTitle">Create Account</h3>
+    <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password">
+    <button class="close-btn" id="accountSubmit">Submit</button>
+    <button class="close-btn" onclick="closeAccount()">Close</button>
+  </div>
+</div>
 
 <script>
-const modal = document.getElementById("modal");
-const pName = document.getElementById("pName");
-const pPrice = document.getElementById("pPrice");
-const waLink = document.getElementById("waLink");
-const locationInput = document.getElementById("location");
+// SIDEBAR
+const sidebar = document.getElementById("sidebar");
+document.querySelector(".hamburger").onclick = ()=> { sidebar.style.left = sidebar.style.left === "0px" ? "-250px" : "0"; }
 
-document.querySelectorAll(".buy").forEach(btn => {
-  btn.onclick = () => {
-    const orderId = "SBA" + Math.floor(Math.random() * 100000);
-    const name = btn.dataset.name;
-    const price = btn.dataset.price;
+// CART
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
+const cartCount = document.getElementById("cartCount");
+const cartItems = document.getElementById("cartItems");
+const waCheckout = document.getElementById("waCheckout");
+const deliveryLoc = document.getElementById("deliveryLoc");
 
-    pName.textContent = name;
-    pPrice.textContent = price;
+function updateCart() {
+  cartCount.textContent = cart.length;
+  cartItems.innerHTML = cart.length === 0 ? "<p>Cart is empty</p>" : "";
+  cart.forEach((item,index)=>{
+    const div = document.createElement("div");
+    div.innerHTML = `${item.name} - ${item.price} <button onclick="removeCart(${index})">Remove</button>`;
+    cartItems.appendChild(div);
+  });
+  localStorage.setItem("cart", JSON.stringify(cart));
+}
 
-    waLink.onclick = () => {
-      const loc = locationInput.value || "Not specified";
-      const msg =
-`Hello Sole by April 👋
+function removeCart(index) { cart.splice(index,1); updateCart(); }
 
-Order ID: ${orderId}
-Product: ${name}
-Price: ${price}
-Delivery Location: ${loc}
-
-I have made payment. Please see my receipt attached.`;
-
-      waLink.href =
-        "https://wa.me/2348122757915?text=" + encodeURIComponent(msg);
-    };
-
-    modal.style.display = "flex";
-  };
+document.querySelectorAll(".add-to-cart").forEach(btn=>{
+  btn.onclick = ()=>{
+    cart.push({name:btn.dataset.name, price:btn.dataset.price});
+    updateCart();
+    alert(`${btn.dataset.name} added to cart`);
+  }
 });
 
-function closeModal() { modal.style.display = "none"; }
-window.onclick = e => { if(e.target===modal) closeModal(); };
+document.querySelector(".cart-btn").onclick = ()=>{ openCart(); }
+document.getElementById("openCartSidebar").onclick = ()=>{ openCart(); }
+
+function openCart(){ document.getElementById("cartModal").style.display="flex"; updateCart(); }
+function closeCart(){ document.getElementById("cartModal").style.display="none"; }
+
+// WHATSAPP CHECKOUT
+waCheckout.onclick = ()=>{
+  const loc = deliveryLoc.value || "Not specified";
+  if(cart.length===0){ alert("Cart is empty"); return; }
+  let msg = "Hello Sole by April 👋\n\nOrder Details:\n";
+  cart.forEach((item,i)=>{ msg += `${i+1}. ${item.name} - ${item.price}\n`; });
+  msg += `Delivery Location: ${loc}\n\nI have made payment. Please see receipt attached.`;
+  waCheckout.href = "https://wa.me/2348122757915?text="+encodeURIComponent(msg);
+  cart=[];
+  updateCart();
+}
+
+// ACCOUNT MODAL
+const accountModal = document.getElementById("accountModal");
+document.getElementById("openAccount").onclick = ()=>{ accountModal.style.display="flex"; document.getElementById("accountTitle").textContent="Create Account"; }
+document.getElementById("accountSubmit").onclick = ()=>{
+  const user = document.getElementById("username").value;
+  const pass = document.getElementById("password").value;
+  if(user && pass){
+    localStorage.setItem("user",{username:user,password:pass});
+    alert("Account created!");
+    accountModal.style.display="none";
+  }else{ alert("Fill all fields"); }
+}
+function closeAccount(){ accountModal.style.display="none"; }
+
+window.onclick = e=>{
+  if(e.target==document.getElementById("cartModal")) closeCart();
+  if(e.target==accountModal) closeAccount();
+}
 </script>
 
 </body>
-</html>
+  </html>
